--- a/Class_16.ipynb
+++ b/Class_16.ipynb
@@ -6,7 +6,6 @@
       "name": "Class_16.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +37,17 @@
       "source": [
         "import pandas as pd"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "RhLHqrH4oyRO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -676,6 +686,39 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "NHJ9uvCFoo1H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ZjkQOi3Kov7I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "SRrUDURKoxRd"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
